--- a/st003/index.html
+++ b/st003/index.html
@@ -23,7 +23,14 @@
                     <a href="#">Depoimentos</a>
                     <a class="contact-btn" href="">Contato</a>
                 </div>
-
+                <div class="items-menu-mobile">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                    <div class="menu-mobile">
+                        <a href="#">Início</a>
+                        <a href="#">Por que nós?</a>
+                        <a href="#">Depoimentos</a>
+                        <a href="#">Contato</a>
+                    </div>
                 </div>
             </div><!--menu-->
 
@@ -222,6 +229,20 @@
                             slidesToScroll: 1
                         }
                     }],
+            });
+        </script>
+        <script>
+            var menuBtn = document.querySelector('.items-menu-mobile i');
+            menuBtn.addEventListener('click',()=>{
+                let itemsMenu = document.querySelector('.menu-mobile');
+                if(itemsMenu.classList.contains('show')){
+                    itemsMenu.classList.remove('show');
+                    itemsMenu.classList.add('hide');
+                }else{
+                    itemsMenu.classList.remove('hide');
+                    itemsMenu.classList.add('show');
+                }
+                
             });
         </script>
 
