--- a/st007/index.html
+++ b/st007/index.html
@@ -15,10 +15,10 @@
         </section>
 
         <section id="redes">
-            <a href="#" target="tela"><img src="pacote2/imagens/logo-home.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="pacote2/imagens/logo-facebook.jpg" alt=""></a><br>
-            <a href="#" target="tela"> <img src="pacote2/imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="pacote2/imagens/logo-github.jpg" alt=""></a>
+            <a href="home.html" target="tela"><img src="pacote2/imagens/logo-home.jpg" alt=""></a><br>
+            <a href="face.html" target="tela"><img src="pacote2/imagens/logo-facebook.jpg" alt=""></a><br>
+            <a href="insta.html" target="tela"> <img src="pacote2/imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="git.html" target="tela"><img src="pacote2/imagens/logo-github.jpg" alt=""></a>
         </section>
     </main>
     
