--- a/st007/insta.html
+++ b/st007/insta.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="pacote2/imagens/insta2.jpeg" alt="">
-    <a href="https://www.instagram.com/d.vallee_/">ACESSE</a>
+    <a href="https://www.instagram.com/d.vallee_/" target="_blank">ACESSE</a>
     
 </body>
 </html>
