--- a/st008/index.html
+++ b/st008/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1 style="color: #FEA82F;"> Meu Site de Filmes</h1>
+        <h1 style="color: #FEA82F;"> Filme.LOg</h1>
     </header>
 
     <nav>
