--- a/st008/index.html
+++ b/st008/index.html
@@ -30,34 +30,45 @@
         </div>
 
         <div class="filme" style="background-color: #333;">
-            <img src="imagens/babyd.jpg" alt="Título do Filme 1">
-            <h2 style="color: #FEA82F;">Em Ritmo de Fuga</h2>
-            <p style="color: #fff;">O filme acompanha Baby, um jovem motorista em fuga que decide trocar sua vida de crime pela garota de seus sonhos.</p>
+            <a href="" style="text-decoration: none;" >
+                <img src="imagens/babyd.jpg" alt="Título do Filme 1">
+                <h2 style="color: #FEA82F;">Em Ritmo de Fuga</h2>
+                <p style="color: #fff;">O filme acompanha Baby, um jovem motorista em fuga que decide trocar sua vida de crime pela garota de seus sonhos.</p>
+            </a>
         </div>
 
         <div class="filme" style="background-color: #333;">
-            <img src="imagens/Free Guy ⋆ Life With Heidi.jpg" alt="Título do Filme 1">
-            <h2 style="color: #FEA82F;">Free Guy</h2>
-            <p style="color: #fff;">Um caixa de banco preso a uma entediante rotina tem sua vida virada de cabeça para baixo quando descobre que é um personagem em um jogo interativo.</p>
+            <a href="" style="text-decoration: none;">
+                <img src="imagens/Free Guy ⋆ Life With Heidi.jpg" alt="Título do Filme 1">
+                <h2 style="color: #FEA82F;">Free Guy</h2>
+                <p style="color: #fff;">Um caixa de banco preso a uma entediante rotina tem sua vida virada de cabeça para baixo quando descobre que é um personagem em um jogo interativo.</p>
+            </a>
         </div>
 
         <div class="filme" style="background-color: #333;">
-            <img src="imagens/john.jpg" alt="Título do Filme 1">
-            <h2 style="color: #FEA82F;">John Wick 4: Baba Yaga</h2>
-            <p style="color: #fff;">O ex-assassino de aluguel John Wick é procurado pelo mundo todo e a recompensa por sua captura aumenta cada vez mais.</p>
+            <a href="" style="text-decoration: none;">
+                <img src="imagens/john.jpg" alt="Título do Filme 1">
+                <h2 style="color: #FEA82F;">John Wick 4: Baba Yaga</h2>
+                <p style="color: #fff;">O ex-assassino de aluguel John Wick é procurado pelo mundo todo e a recompensa por sua captura aumenta cada vez mais.</p>
+            </a>
         </div>
 
-        <div class="filme" style="background-color: #333;">
-            <img src="imagens/onterestelar.jpg" alt="Título do Filme 1">
-            <h2 style="color: #FEA82F;">Interestelar</h2>
-            <p style="color: #fff;">As reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie.</p>
-        </div>
+            <div class="filme" style="background-color: #333;">
+                <a href="" style="text-decoration: none;">
+                    <img src="imagens/onterestelar.jpg" alt="Título do Filme 1">
+                    <h2 style="color: #FEA82F;">Interestelar</h2>
+                    <p style="color: #fff;">As reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie.</p>
+                </a>
+            </div>
+        
 
 
         <div class="filme" style="background-color: #333;">
-            <img src="imagens/Joker - 2019.jpg" alt="Título do Filme 1">
-            <h2 style="color: #FEA82F;">Coringa</h2>
-            <p style="color: #fff;">Isolado, intimidado e desconsiderado pela sociedade, o fracassado comediante Arthur Fleck inicia seu caminho como uma mente criminosa após assassinar três homens em pleno metrô.</p>
+            <a href="" style="text-decoration: none;">
+                <img src="imagens/Joker - 2019.jpg" alt="Título do Filme 1">
+                <h2 style="color: #FEA82F;">Coringa</h2>
+                <p style="color: #fff;">Isolado, intimidado e desconsiderado pela sociedade, o fracassado comediante Arthur Fleck inicia seu caminho como uma mente criminosa após assassinar três homens em pleno metrô.</p>
+            </a>
         </div>
 
     </main>
