--- a/st008/index.html
+++ b/st008/index.html
@@ -25,7 +25,9 @@
             <a href="" style="text-decoration: none;">
                 <img src="imagens/appebn.jpg" alt="Título do Filme 1">
                 <h2 style="color: #FEA82F;">Oppenheimer</h2>
-                <p style="color: #fff;">O físico J. Robert Oppenheimer trabalha com uma equipe de cientistas durante o Projeto Manhattan, levando ao desenvolvimento da bomba atômica.</p>
+                <p style="color: #fff;">Drama/Suspense<br>Duração 3h06m</p>
+            
+
             </a>
         </div>
 
@@ -33,7 +35,7 @@
             <a href="" style="text-decoration: none;" >
                 <img src="imagens/babyd.jpg" alt="Título do Filme 1">
                 <h2 style="color: #FEA82F;">Em Ritmo de Fuga</h2>
-                <p style="color: #fff;">O filme acompanha Baby, um jovem motorista em fuga que decide trocar sua vida de crime pela garota de seus sonhos.</p>
+                <p style="color: #fff;">Ação/Drama <br> Duração 1h55m</p>
             </a>
         </div>
 
@@ -41,7 +43,7 @@
             <a href="" style="text-decoration: none;">
                 <img src="imagens/Free Guy ⋆ Life With Heidi.jpg" alt="Título do Filme 1">
                 <h2 style="color: #FEA82F;">Free Guy</h2>
-                <p style="color: #fff;">Um caixa de banco preso a uma entediante rotina tem sua vida virada de cabeça para baixo quando descobre que é um personagem em um jogo interativo.</p>
+                <p style="color: #fff;">Comedia/Ação <br> Duração 1h55m</p>
             </a>
         </div>
 
@@ -49,7 +51,7 @@
             <a href="" style="text-decoration: none;">
                 <img src="imagens/john.jpg" alt="Título do Filme 1">
                 <h2 style="color: #FEA82F;">John Wick 4: Baba Yaga</h2>
-                <p style="color: #fff;">O ex-assassino de aluguel John Wick é procurado pelo mundo todo e a recompensa por sua captura aumenta cada vez mais.</p>
+                <p style="color: #fff;">Ação/Drama <br> Duração 2h49m</p>
             </a>
         </div>
 
@@ -57,7 +59,7 @@
                 <a href="" style="text-decoration: none;">
                     <img src="imagens/onterestelar.jpg" alt="Título do Filme 1">
                     <h2 style="color: #FEA82F;">Interestelar</h2>
-                    <p style="color: #fff;">As reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie.</p>
+                    <p style="color: #fff;">Ficção Cientifica/Aventura <br> Duração 2h45m</p>
                 </a>
             </div>
         
@@ -67,7 +69,7 @@
             <a href="" style="text-decoration: none;">
                 <img src="imagens/Joker - 2019.jpg" alt="Título do Filme 1">
                 <h2 style="color: #FEA82F;">Coringa</h2>
-                <p style="color: #fff;">Isolado, intimidado e desconsiderado pela sociedade, o fracassado comediante Arthur Fleck inicia seu caminho como uma mente criminosa após assassinar três homens em pleno metrô.</p>
+                <p style="color: #fff;">Ação/Crime <br> Duração 2h02m</p>
             </a>
         </div>
 
