--- a/st008/index.html
+++ b/st008/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <div class="filme" style="background-color: #333;">
-            <a href="" style="text-decoration: none;">
+            <a href="open.html" target="_blank" style="text-decoration: none;">
                 <img src="imagens/appebn.jpg" alt="Título do Filme 1">
                 <h2 style="color: #FEA82F;">Oppenheimer</h2>
                 <p style="color: #fff;">Drama/Suspense<br>Duração 3h06m</p>
