--- a/st010/index.html
+++ b/st010/index.html
@@ -17,7 +17,7 @@
         <br>
         <input type="submit" value="Entrar" class="entrar">
         <br>
-        <a href="#">Esqueceu a conta</a>
+        <a href="#">Esqueceu a conta ?</a>
         <br>
         <br>
         <input type="button" value="Criar nova conta" class="nova">
