--- a/st010/index.html
+++ b/st010/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <img src="imagens/facebook-logo.png" alt="">
+    <img src="imagens/Facebook-Logo.png" alt="">
     <div class="form">
         <p>Entrar no Facebook</p>
         <form action="cadastro.php" method="post" autocomplete="on"> 
