--- a/st015/index.html
+++ b/st015/index.html
@@ -1,193 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-	<title>Nertflix</title>
-	<meta charset="utf-8">
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="logo">
+        <img src="imagens/Netflixlogo.png" alt="">
+    </div>
 
-	<header>
-		<div class="center">
-			<div class="header-left">
-				<a href=""><img src="images/logo_netflix.png" /></a>
-				<div class="menu-header">
-					<ul>
-						<li><a href="">Início</a></li>
-						<li><a href="">Séries</a></li>
-						<li><a href="">Filmes</a></li>
-						<li><a href="">Adicionados Recentemente</a></li>
-						<li><a href="">Minha Lista</a></li>
-					</ul>
-				</div><!--menu-header-->
-			</div><!--header-left-->
-
-			<div class="header-right">
-				<div class="search">
-					<i class="icon-search"></i>
-				</div><!--search-->
-				<a href="">INFANTIL</a>
-				<i class="icon-gift"></i>
-				<div class="notifications">
-					<div class="circle-notifications">
-						<span>10</span>
-					</div><!--circle-notification-->
-					<i class="icon-bell-alt"></i>
-				</div><!--notifications-->
-			</div><!--header-left-->
-
-			<div class="clear"></div>
-		</div><!--center-->
-	</header>
-
-	<section class="destaque">
-
-	<video autoplay muted loop id="video-destaque">
-	  <source src="images/arrow.mp4" type="video/mp4">
-	  Your browser does not support HTML5 video.
-	</video>
-
-		<div class="overlay"></div><!--overlay-->
-		<div class="texto-destaque">
-			<h2>Arrow</h2>
-			<h3>Assita a 9 temporada completa agora!</h3>
-			<p>Aqui vai a descrição completa da minha série ou filme.</p>
-			<br />
-			<a href=""><i class="icon-play"></i> Assistir</a>
-			<a href=""><i class="icon-play"></i> Assistir</a>
-			<a href=""><i class="icon-play"></i> Assistir</a>
-		</div><!--texto-destaque-->
-	</section><!--destaque-->
-
-	<!--
-		TODO:
-		- instrucao slick slider (x)
-		- zindex (x)
-		- ocultar menu
-	-->
-
-	<section class="vitrine">
-		<div class="vitrine-flex">
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-				<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-						<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-	</div>	<!--vitrine-flex-->
-			<div class="vitrine-flex">
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-				<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-						<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-	</div>	<!--vitrine-flex-->
-			<div class="vitrine-flex">
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-				<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-						<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/suits.jpeg');"></div>
-			</div>
-			<div class="vitrine-single-banner">
-				<div class="vitrine-wraper" style="background-image: url('images/arrow.jpg');"></div>
-			</div>
-	</div>	<!--vitrine-flex-->
-	</section><!--vitrine-->
-
-	<script src="jquery.js"></script>
-	<script src="slick.min.js"></script>
-
-	<script>
-		$('.vitrine-flex').slick({
-	dots: false,
-	arrows:false,
-  infinite: false,
-  centerMode: false,
-  speed:1000,
-  slidesToShow: 6,
-      autoplay: true,
-      autoplaySpeed: 3000,
-      pauseOnHover:false,
-        responsive: [
-    {
-      breakpoint: 768,
-      settings: {
-        slidesToShow: 3
-      }
-  }]
-	});
-
-		$('.vitrine-wraper').hover(function(){
-			$(this).css('z-index','1000');
-		})
-
-		$('.vitrine-wraper').mouseout(function(){
-			$(this).css('z-index','0');
-		})
-	</script>
-
+    <form>
+        <h2>Entrar</h2>
+        <input type="email" name="" id="" placeholder="Email ou numero de telefone">
+        <br>
+        <input type="password" name="" id="" placeholder="Senha">
+        <br>
+        <input class="entre" type="submit" value="Entrar">
+        <br>
+        <h3>Novo por aqui ? <a href="">Assine agora</a></h3>
+        <p>O acesso está protegido pelo Google reCAPTCHA para garantir que você não é um robô. </p>
+    </form>
+    
+    
 </body>
 </html>
