--- a/st017/home.html
+++ b/st017/home.html
@@ -29,10 +29,10 @@
             <div class="netflix-nav">
               <section>
                 <button>Home</button>
-                <button>TV Shows</button>
-                <button>Movies</button>
-                <button>News & Popular</button>
-                <button>My List</button>
+                <button>Filmes</button>
+                <button>Series</button>
+                <button>Bombando</button>
+                <button>Minha Lista</button>
               </section>
             </div>
             <div class="netflix-dropdown-box dropdown">
@@ -42,10 +42,10 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="#">Home</a></li>
-                <li><a class="dropdown-item" href="#">TV Shows</a></li>
-                <li><a class="dropdown-item" href="#">Movies</a></li>
-                <li><a class="dropdown-item" href="#">News & Popular</a></li>
-                <li><a class="dropdown-item" href="#">My List</a></li>
+                <li><a class="dropdown-item" href="#">Filmes</a></li>
+                <li><a class="dropdown-item" href="#">Series</a></li>
+                <li><a class="dropdown-item" href="#">Bombando</a></li>
+                <li><a class="dropdown-item" href="#">Minha Lista</a></li>
               </ul>
             </div>
           </div>
@@ -73,10 +73,8 @@
             <img src="./imge/image2.webp" alt="">
 
             <div class="d-flex mt-2">
-              <button class="btn btn-light m-2"> <i class="bi bi-play-fill" style="color: black; padding: 0%;"></i> Play
-                Now </button>
-              <button class="btn btn-secondary m-2"><i class="bi bi-info-circle" style=" padding: 0%;"></i> More
-                Info</button>
+              <button class="btn btn-light m-2"> <i class="bi bi-play-fill" style="color: black; padding: 0%;"></i> Assistir</button>
+              <button class="btn btn-secondary m-2"><i class="bi bi-info-circle" style=" padding: 0%;"></i> Mais Informações</button>
             </div>
           </section>
 
@@ -90,7 +88,7 @@
     <!-- ------------ Movies------------------------------- -->
     <div class=" container-fluid section-1 ">
       <div class=" col-12">
-        <h5 class="heding-section">Trending Now</h5>
+        <h5 class="heding-section">Em Alta</h5>
       </div>
       <div class="col-12 slide1 slide">
 
@@ -101,7 +99,7 @@
 
     <div class=" container-fluid section-1  ">
       <div class=" col-12">
-        <h5 class="heding-section">Popular On Netfilx</h5>
+        <h5 class="heding-section">Populares na Netfilx</h5>
       </div>
       <div class="col-12 slide3 slide">
 
@@ -112,7 +110,7 @@
 
     <div class=" container-fluid section-1  ">
       <div class=" col-12">
-        <h5 class="heding-section">Popular TV Shows</h5>
+        <h5 class="heding-section">Populares Programas de TV</h5>
       </div>
    <div  class="col-12 slide2 slide">
  
@@ -165,7 +163,7 @@
         <div class="row">
 
           <div class="col">
-            <p class="copy-right">@netflix clone</p>
+            <p class="copy-right">@Eu Mesmo</p>
           </div>
         </div>
       </div>
