--- a/st015/index.html
+++ b/st015/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="netflix-01.ico" type="image/x-icon">
 </head>
 <body>
     <div class="pai">
@@ -15,9 +16,9 @@
             <h2>Entrar</h2>
             <input type="email" name="" id="" placeholder="Email ou numero de telefone">
             <br>
-            <input type="password" name="" id="" placeholder="Senha">
+            <input class="senha" type="password" name="" id="" placeholder="Senha">
             <br>
-            <input class="entre" type="submit" value="Entrar">
+            <a class="entre" href="index2.html" target="_blank">Entre</a>
             <br>
             <h3>Novo por aqui ? <a href="">Assine agora</a></h3>
             <p>O acesso está protegido pelo Google reCAPTCHA para garantir que você não é um robô. </p>
