--- a/st012/vendaporsche.html
+++ b/st012/vendaporsche.html
@@ -54,19 +54,16 @@
 	<div class="info-veiculo">
 		<div class="info-bread"><a href="">HOME</a><span>></span>
 		<a href="">VENDA</a><span>></span>
-		<a href="">VEÍCULO DE TESTE</a></div>
-		<div style="background-image:url('imagens/carro1.jpg');" class="foto-destaque"></div>
+		<a href="">Porsche 911 Cabriolet 1996</a></div>
+		<div style="background-image:url('imagens/cabriolet.jpg');" class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
 		<div class="arrow-left-nav"></div>
 		<div class="arrow-right-nav"></div>
 		<div class="nav-galeria">
 			<div class="nav-galeria-wraper">
-				<div style="background-color:rgb(210,210,210);" class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/carro1.jpg');" class="mini-img"></div></div>
+				<div style="background-color:rgb(210,210,210);" class="mini-img-wraper"><div style="background-image:url('imagens/porche1.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/porche2.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/porche3.jpg');" class="mini-img"></div></div>
 			</div><!--nav-galeria-wraper-->
 
 		</div><!--nav-galeria-->
@@ -74,8 +71,8 @@
 	</div><!--info-->
 
 	<div class="descricao-veiculo">
-		<h2>R$20.000,00</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae dolor elementum, aliquet diam non, placerat risus. Suspendisse fringilla sollicitudin velit sed elementum</p>
+		<h2>R$789.900,00</h2>
+		<p>Motor 6 cilindros boxer 3.6 litros refrigerado à ar com 285cv e 34kgfm de torque, Capota elétrica,  Veículo em estado de conservação impecável, manutenção em dia. Geração 993, último motor porsche refrigerado à ar</p>
 		<a class="btn1" href="">Entre em contato</a>
 	</div><!--descricao-veiculo-->
 	<div class="clear"></div>
@@ -125,33 +122,32 @@
 		<div class="ln1"></div>
 		<h2>Veículos em destaque</h2>
 	</div><!--line-titulo-->
-	<div class="container">
 	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div style="background-image:url('imagens/puma.jpg');" class="carro-img"></div><!--carro-img-->
 		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<h2>Puma GTE 1974</h2>
+			<p>Motor VW 1600, Gasolina, 2P, Manual de 4 marchas</p>
+			<a class="btn1" href="vendapuma.html">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/ferrari.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Ferrari 348 1990</h2>
+			<p>V8, 292 CV, Gasolina. </p>
 			<a class="btn1" href="">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 
 	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
-		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
-		</div><!--info-carro-->
-	</div><!--vitrine-destaque-->
-
-	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
-		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
-		</div><!--info-carro-->
-	</div><!--vitrine-destaque-->
+        <div style="background-image:url('imagens/carger.jpg');" class="carro-img"></div><!--carro-img-->
+        <div class="info-carro">
+        <h2>Dodge Charger R/T 1970</h2>
+        <p>Motor V8, Gasolina, sem detalhes, Automatico</p>
+        <a class="btn1" href="vendacharger.html">Mais Detalhes</a>
+    </div><!--info-carro-->
+</div><!--vitrine-destaque-->
 	<div class="clear"></div>
 	</div><!--container-->
 </section><!--veiculos-destaque-->
