--- a/st012/venda.html
+++ b/st012/venda.html
@@ -104,59 +104,85 @@
 		<div class="vitrine-venda">
 
 
-		<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
-		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
-		</div><!--info-carro-->
-	</div><!--vitrine-destaque-->
-
-	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
-		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
-		</div><!--info-carro-->
-	</div><!--vitrine-destaque-->
-
-	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
-		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
-		</div><!--info-carro-->
-	</div><!--vitrine-destaque-->
-
-
+			<div class="vitrine-destaque">
+				<div style="background-image:url('imagens/carger.jpg');" class="carro-img"></div><!--carro-img-->
+				<div class="info-carro">
+				<h2>Dodge Charger R/T 1970</h2>
+				<p>Motor V8, Gasolina, sem detalhes, Automatico</p>
+				<a class="btn1" href="vendacharger.html">Mais Detalhes</a>
+			</div><!--info-carro-->
+		</div><!--vitrine-destaque-->
 
 		<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+			<div style="background-image:url('imagens/puma.jpg');" class="carro-img"></div><!--carro-img-->
+			<div class="info-carro">
+				<h2>Puma GTE 1974</h2>
+				<p>Motor VW 1600, Gasolina, 2P, Manual de 4 marchas</p>
+				<a class="btn1" href="vendapuma.html">Mais Detalhes</a>
+			</div><!--info-carro-->
+		</div><!--vitrine-destaque-->
+
+		<div class="vitrine-destaque">
+			<div style="background-image:url('imagens/opalao.jpg');" class="carro-img"></div><!--carro-img-->
+			<div class="info-carro">
+				<h2>Opala 6 cilindros 1979</h2>
+				<p>Motor 6 cilindros em linha, Câmbio manual, Tração traseira</p>
+				<a class="btn1" href="vendaopala.html">Mais Detalhes</a>
+			</div><!--info-carro-->
+		</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/musta.jpg');" class="carro-img"></div><!--carro-img-->
 		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<h2>Mustang Fastback 1965</h2>
+			<p>Motor 302 com quadrijet Edelbrock, Pneus novos Bf Goodrich, Placas pretas.</p>
+			<a class="btn1" href="vendamustang.html">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/corvetao.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Corvette 1975</h2>
+			<p>Motor V8 5.7 litros, Gasolina, Automático, Perfeito estado</p>
+			<a class="btn1" href="vendacorvete.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 
 	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div style="background-image:url('imagens/maverk.jpg');" class="carro-img"></div><!--carro-img-->
 		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<h2>Maverick V8 1974</h2>
+			<p>Motor V8 302 com 197cv e 39,5 kgfm de torque, Câmbio manual 4 marchas, Placa preta</p>
+			<a class="btn1" href="vendamavek.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 
 	<div class="vitrine-destaque">
-		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div style="background-image:url('imagens/cabriolet.jpg');" class="carro-img"></div><!--carro-img-->
 		<div class="info-carro">
-			<h2>Volkswagen Karmann-ghia</h2>
-			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<h2>Porsche 911 Cabrio 1996</h2>
+			<p>Motor 6 cilindros boxer 3.6 litros, Capota elétrica, Câmbio tiptronic </p>
+			<a class="btn1" href="vendaporsche.html">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/cobra.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Shelby Cobra 1967</h2>
+			<p>Motor V8 302, Direção hidráulica, Capota de tecido com vidro traseiro amplo</p>
+			<a class="btn1" href="vendacobra.html">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/ferrari.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Ferrari 348 1990</h2>
+			<p>V8, 292 CV, Gasolina. </p>
+			<a class="btn1" href="vendaferrari.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 
