--- a/st012/vendacharger.html
+++ b/st012/vendacharger.html
@@ -52,8 +52,8 @@
 	<div class="container">
 
 	<div class="info-veiculo">
-		<div class="info-bread"><a href="">HOME</a><span>></span>
-		<a href="">VENDA</a><span>></span>
+		<div class="info-bread"><a href="index.html">HOME</a><span>></span>
+		<a href="venda.html">VENDA</a><span>></span>
 		<a href="">Dodge Charger R/T 1970</a></div>
 		<div style="background-image:url('imagens/carger.jpg');" class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
@@ -145,7 +145,7 @@
 		<div class="info-carro">
 			<h2>Corvette 1975</h2>
 			<p>Motor V8 5.7 litros, Gasolina, Automático, Perfeito estado</p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<a class="btn1" href="vendacorvete.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 	<div class="clear"></div>
