--- a/st012/vendamavek.html
+++ b/st012/vendamavek.html
@@ -54,16 +54,16 @@
 	<div class="info-veiculo">
 		<div class="info-bread"><a href="index.html">HOME</a><span>></span>
 		<a href="venda.html">VENDA</a><span>></span>
-		<a href="">Ferrari 348 Ts Targa</a></div>
-		<div style="background-image:url('imagens/ferrari.jpg');" class="foto-destaque"></div>
+		<a href="">Opala 1979</a></div>
+		<div style="background-image:url('imagens/maverk.jpg');" class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
 		<div class="arrow-left-nav"></div>
 		<div class="arrow-right-nav"></div>
 		<div class="nav-galeria">
 			<div class="nav-galeria-wraper">
-				<div style="background-color:rgb(210,210,210);" class="mini-img-wraper"><div style="background-image:url('imagens/ferrari1.jpg');" class="mini-img"></div></div>
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/ferrari2.jpg');" class="mini-img"></div></div>
-				<div class="mini-img-wraper"><div style="background-image:url('imagens/ferrari3.jpg');" class="mini-img"></div></div>
+				<div style="background-color:rgb(210,210,210);" class="mini-img-wraper"><div style="background-image:url('imagens/mavek1.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/mavek2.jpg');" class="mini-img"></div></div>
+				<div class="mini-img-wraper"><div style="background-image:url('imagens/mavek3.jpg');" class="mini-img"></div></div>
 			</div><!--nav-galeria-wraper-->
  
 		</div><!--nav-galeria-->
@@ -71,8 +71,8 @@
 	</div><!--info-->
 
 	<div class="descricao-veiculo">
-		<h2>R$789.900,00</h2>
-		<p>Ferrari ano 1990 com mottor V8, Gasolina, 31.000km, Rodados de tirar o folego</p>
+		<h2>R$ 199.900</h2>
+		<p>Motor V8 302 com 197cv e 39,5 kgfm de torque, Câmbio manual 4 marchas, Mecânica revisada e em perfeito funcionamento</p>
 		<a class="btn1" href="">Entre em contato</a>
 	</div><!--descricao-veiculo-->
 	<div class="clear"></div>
@@ -139,6 +139,7 @@
 			<a class="btn1" href="vendacobra.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
+
 
 	<div class="vitrine-destaque">
         <div style="background-image:url('imagens/carger.jpg');" class="carro-img"></div><!--carro-img-->
