--- a/st012/vendaporsche.html
+++ b/st012/vendaporsche.html
@@ -52,8 +52,8 @@
 	<div class="container">
 
 	<div class="info-veiculo">
-		<div class="info-bread"><a href="">HOME</a><span>></span>
-		<a href="">VENDA</a><span>></span>
+		<div class="info-bread"><a href="index.html">HOME</a><span>></span>
+		<a href="venda.html">VENDA</a><span>></span>
 		<a href="">Porsche 911 Cabriolet 1996</a></div>
 		<div style="background-image:url('imagens/cabriolet.jpg');" class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
@@ -136,7 +136,7 @@
 		<div class="info-carro">
 			<h2>Ferrari 348 1990</h2>
 			<p>V8, 292 CV, Gasolina. </p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<a class="btn1" href="vendaferrari.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 
