--- a/st012/sobre.html
+++ b/st012/sobre.html
@@ -47,16 +47,10 @@
 	<div class="container">
 		<div class="img-destaque-sobre"></div><!--img-destaque-sobre-->
 		<div class="descricao-autor">
-			<h2>Lorem Ipsum</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac tincidunt lorem. Nulla condimentum et dolor et convallis. Mauris egestas ligula in pharetra venenatis. Etiam pharetra ipsum libero, vitae dignissim tortor imperdiet et. Aenean in tellus lorem ligula in pharetra venenatis. Etiam pharetra ipsum libero, vitae dignissim tortor imperdiet et. Aenean in tellus lorem ligula in pharetra venenatis. Etiam pharetra ipsum libero, vitae dignissim tortor imperdiet et. Aenean in tellus lorem.</p>
-		</div><!--descricao-autor-->
-		<div class="descricao-autor2">
-			<div class="img-small"></div>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac tincidunt lorem. Nulla condimentum et dolor et convallis. Mauris egestas ligula in pharetra venenatis. Etiam pharetra ipsum libero. Nulla condimentum et dolor et convallis. Mauris egestas ligula in pharetra venenatis.
-			</p>
-			<div class="clear"></div>
-		</div><!--descricao-autor2-->
+			<h2>RM Veiculos</h2>
+			<p>A RM Veículos antigos carrega um nome de credibilidade e reconhecimento no segmento de veículos antigos e colecionáveis. Fundada por Rogério Franz, empresário, competidor, colecionador e apaixonado por carros antigos, a empresa possui uma posição transparente para oferecer seus serviços aos clientes e parceiros.
+
+				A sede própria da empresa está localizada em Porto Alegre – RS, com um atendimento em todo o cenário nacional, utilizando das principais ferramentas de comunicação, para aproximar o cliente do seu futuro veículo, com toda a segurança e transparência possível.</p>
 	</div><!--container-->
 </section><!--sobre-->
 
