--- a/st012/vendamustang.html
+++ b/st012/vendamustang.html
@@ -52,8 +52,8 @@
 	<div class="container">
 
 	<div class="info-veiculo">
-		<div class="info-bread"><a href="">HOME</a><span>></span>
-		<a href="">VENDA</a><span>></span>
+		<div class="info-bread"><a href="index.html">HOME</a><span>></span>
+		<a href="venda.html">VENDA</a><span>></span>
 		<a href="">Mustang Fastback 1965</a></div>
 		<div style="background-image:url('imagens/musta.jpg');" class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
@@ -136,7 +136,7 @@
 		<div class="info-carro">
 			<h2>Ferrari 348 1990</h2>
 			<p>V8, 292 CV, Gasolina. </p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<a class="btn1" href="vendaferrari.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 
@@ -145,7 +145,7 @@
 		<div class="info-carro">
 			<h2>Corvette 1975</h2>
 			<p>Motor V8 5.7 litros, Gasolina, Automático, Perfeito estado</p>
-			<a class="btn1" href="">Mais Detalhes</a>
+			<a class="btn1" href="vendacorvete.html">Mais Detalhes</a>
 		</div><!--info-carro-->
 	</div><!--vitrine-destaque-->
 	<div class="clear"></div>
