--- a/st012/vendapuma.html
+++ b/st012/vendapuma.html
@@ -52,8 +52,8 @@
 	<div class="container">
 
 	<div class="info-veiculo">
-		<div class="info-bread"><a href="">HOME</a><span>></span>
-		<a href="">VENDA</a><span>></span>
+		<div class="info-bread"><a href="index.html">HOME</a><span>></span>
+		<a href="venda.html">VENDA</a><span>></span>
 		<a href="">Puma GTE 1974</a></div>
 		<div style="background-image:url('imagens/puma.jpg');" class="foto-destaque"></div>
 		<div class="nav-galeria-parent">
