--- a/st019/indewx.html
+++ b/st019/indewx.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stayles.css">
+    <link rel="shortcut icon" href="fav/favicon.ico" type="image/x-icon">
     <title>Hortifruti Store</title>
 </head>
 <body>
     <header>
+        <div class="logo">
+            <img src="imagens/logo2.png" alt="">
+        </div>
         <h1>Hortifruti Store</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#">Hortifruti</a></li>
+                <li><a href="#">Laticinios</a></li>
+                <li><a href="">Mercearia</a></li>
+                <li><a href="#">Bebidas</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="produtos">
         <article>
-            <img src="imagens/maca.jpg" alt="Maçã">
+            <img src="imagens/maca3.png" alt="Maçã">
             <h2>Maçã</h2>
             <p>Descrição do produto e informações adicionais.</p>
             <p class="preco">R$ 2,00/unidade</p>
             <label for="maca-quantidade">Quantidade:</label>
             <input type="number" id="maca-quantidade" name="maca-quantidade" min="0" value="0">
+            <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
         </article>
 
         <article>
@@ -35,6 +41,7 @@
             <p class="preco">R$ 1,50/unidade</p>
             <label for="banana-quantidade">Quantidade:</label>
             <input type="number" id="banana-quantidade" name="banana-quantidade" min="0" value="0">
+            <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
         </article>
 
         <article>
@@ -44,6 +51,7 @@
             <p class="preco">R$ 1,20/unidade</p>
             <label for="laranja-quantidade">Quantidade:</label>
             <input type="number" id="laranja-quantidade" name="laranja-quantidade" min="0" value="0">
+            <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
         </article>
 
         <article>
@@ -53,6 +61,7 @@
             <p class="preco">R$ 3,00/100g</p>
             <label for="uva-quantidade">Quantidade:</label>
             <input type="number" id="uva-quantidade" name="uva-quantidade" min="0" value="0">
+            <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
         </article>
 
         <article>
@@ -62,6 +71,7 @@
             <p class="preco">R$ 4,00/unidade</p>
             <label for="abacaxi-quantidade">Quantidade:</label>
             <input type="number" id="abacaxi-quantidade" name="abacaxi-quantidade" min="0" value="0">
+            <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
         </article>
 
         <article>
@@ -71,6 +81,7 @@
             <p class="preco">R$ 2,50/unidade</p>
             <label for="manga-quantidade">Quantidade:</label>
             <input type="number" id="manga-quantidade" name="manga-quantidade" min="0" value="0">
+            <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
         </article>
     </section>
 
