--- a/pim1/index.html
+++ b/pim1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stayles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="fav/favicon.ico" type="image/x-icon">
     <title>Hortifruti Store</title>
 </head>
