--- a/st015/index.html
+++ b/st015/index.html
@@ -13,14 +13,14 @@
             <img src="imagens/Netflixlogo.png" alt="">
             </div>
             <div class="container">
-                <form>
+                <form action="index2.html" method="get">
                     <h1>Entrar</h1>
-                    <input type="email" name="" id="i-email" placeholder="E-mail ou numero de telefone">
+                    <input type="email" name="" id="i-email" placeholder="E-mail ou numero de telefone" required>
                     <br>
                     <input type="password" name="" id="i-senha"
-                    placeholder="Senha">
+                    placeholder="Senha" required>
                     <br>
-                    <div class="buttom"><a class="Entrar" href="index2.html">Entrar</a></div>
+                    <button type="submit">Enviar</button>
                     <br>
                     <a class="help" href="#">Precisa de ajuda ?</a>
                     <br>
