--- a/st015/index.html
+++ b/st015/index.html
@@ -22,9 +22,10 @@
                     <br>
                     <button type="submit">Enviar</button>
                     <br>
-                    <a class="help" href="#">Precisa de ajuda ?</a>
                     <br>
-                    <p class="novo">Novo por aqui ? <a href="">Assine agora</a></p>
+                    <p class="ou">OU</p>
+                    <br>
+                    <p class="novo"><strong>Usar um código de acesso</strong></p>
                     <br>
                     <p>O acesso está protegido pelo Google reCAPTCHA para garantir que você não é um robô.</p>
             
