--- a/st017/index.html
+++ b/st017/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modo Escuro</title>
+    <script src="index.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,12 +17,6 @@
         </label>
     </div>
 
-    <script>
-        const checkbox = document.getElementById("status");
-
-        checkbox.addEventListener("change", function () {
-            document.body.classList.toggle("dark-mode", checkbox.checked);
-        });
-    </script>
+    
 </body>
 </html>
